[workspace]
members = [
    "day01",
    "day02",
    "day03",
    "day04",
    "day05",
    "day06",
    "day07",
    "day08",
    "day09",
]
resolver = "3"

[workspace.dependencies]
glam = "0.30.9"
itertools = "0.14.0"
rayon = "1.10.0"
rstest = "0.26.1"
rstest_reuse = "0.7.0"
thiserror = "2.0.11"

[workspace.dependencies.criterion]
version = "0.8.0"
features = ["html_reports"]
