[package]
name = "day02"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[dependencies]
itertools.workspace = true
thiserror.workspace = true

[dev-dependencies]
criterion.workspace = true
rstest.workspace = true
rstest_reuse.workspace = true

[[bench]]
name = "benchmark"
harness = false
